--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="line"></div>
             <div class="content">
                 <h1>Muhammad Omar</h1>
-                <h4>Founder</h4>
+                <h4>Chief Executive Officer</h4>
                 <hr class="hr1">
                 <div class="list">
                     <ul>
